# Dwellio

./: README.md  dwellio.db  pyproject.toml
app/: config.py  db.py  main.py  models.py
app/api/: events.py  feedback.py  search.py
app/data/: mock_listings.json
app/services/: agent.py  explanations.py  listings.py  ranking.py
